attempt at creating token endpoint
